# mdner

./: .gitignore  README.md  pyproject.toml  text_dev.txt  text_train.txt
ai_annotations/: chatgpt4o.txt  chatgpt4o_zenodo_3950029.txt  chatgpt_annotated.txt  chatgpt_zenodo_30904.txt  chatgpt_zenodo_3950029.txt  chatgpt_zenodo_7440399.txt  chatgpt_zenodo_7672195.txt  claude_3_7_sonnet.txt  claude_3_7_sonnet_zenodo_3950029.txt  deepseek_qwen.txt  gemini_2_0_flash.txt  gemini_2_0_flash_thinking.txt  gemini_2_0_flash_zenodo_3950029.txt  gemma2.txt  llama_3_1_b_annotation.txt  mistral_saba_24b_zenodo_3950029.txt
annotations/: figshare_10269416.json  figshare_10269416.txt  figshare_10287393.json  figshare_10287393.txt  figshare_11343020.json  figshare_11343020.txt  figshare_11356691.json  figshare_11356691.txt  figshare_1146536.json  figshare_1146536.txt  figshare_11475366.json  figshare_11475366.txt  figshare_11569377.json  figshare_11569377.txt  figshare_11569452.json  figshare_11569452.txt  figshare_11688372.json  figshare_11688372.txt  figshare_11697906.json  figshare_11697906.txt  figshare_11704443.json  figshare_11704443.txt  figshare_11764158.json  figshare_11764158.txt  figshare_11771604.json  figshare_11771604.txt  figshare_11808321.json  figshare_11808321.txt  figshare_11808396.json  figshare_11808396.txt  figshare_11808522.json  figshare_11808522.txt  figshare_12046578.json  figshare_12046578.txt  figshare_12064266.json  figshare_12064266.txt  figshare_12120159.json  figshare_12120159.txt  figshare_121241.json  figshare_121241.txt  (+721 more)
binder/: app.yml  (+1 more)
(+188 files in other folders)
