[project]
name = "mdner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastparquet>=2024.11.0",
    "groq>=0.22.0",
    "ipython==8.13.2",
    "jupyterlab==3",
    "language-tool-python>=2.9.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "openai>=1.75.0",
    "protobuf==3.20.*",
    "pyarrow>=19.0.1",
    "pydocstyle>=6.3.0",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "spacy[lookups,transformers]>=3.8.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "watermark>=2.5.0",
]
